🐛 Fixed horizontal scrollbar
no refs.
- hid the horizontal scrollbar in the main navigation

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -305,7 +305,9 @@ body {
     position: relative;
     flex: 1 0 auto;
     display: flex;
-    height: 100%;
+    align-items: flex-start;
+    height: 64px;
+    overflow-y: hidden;
 }
 
 .site-nav-left-content {
@@ -316,7 +318,7 @@ body {
     overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
     margin-right: 10px;
-    padding: 10px 0 9px;
+    padding: 10px 0 80px;
     font-weight: 500;
     letter-spacing: 0.2px;
     text-transform: uppercase;
